# src/routes/adminRouter.js
@@ -2,6 +2,7 @@ import express from 'express'
 import runValidations from '../middlewares/common/validations/runValidations.js'
 import adminCredentials from '../middlewares/admin/adminCredentials.js'
 import tournamentDateRouter from './tournamentDateRouter.js'
+import teamRouter from './teamRouter.js'
 
 const adminRouter = express.Router()
 
@@ -9,18 +10,12 @@ const runCheckAdminCredentials = runValidations([
     adminCredentials
 ])
 
-const print = (req, res, next) => {
-    console.log('en print')
-    console.log(req.body)
-    next()
-}
-
 adminRouter.use(runCheckAdminCredentials)
-
 adminRouter.use('/tournament-details', tournamentDateRouter)
+adminRouter.use('/teams', teamRouter)
 
-adminRouter.post('/get-info',
-    print
-)
+// todo: necesito este endpoint?
+// adminRouter.post('/get-info',
+// )
 
 export default adminRouter
